--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </h1>
 
       <div class="row">
-        <form action="col s12">
+        <form id="myForm" class="col s12">
           <div class="row">
             <div class="input-field col s12">
               <input id="title" type="text" class="validate" />
@@ -38,14 +38,17 @@
           </div>
           <div class="row">
             <div class="input-field col s12">
-              <textarea id="textarea1" class="materialize-textarea"></textarea>
+              <textarea
+                id="description"
+                class="materialize-textarea"
+              ></textarea>
               <label for="description">Description</label>
             </div>
           </div>
           <button
+            id="addBook"
             class="btn waves-effect waves-light"
             type="submit"
-            name="action"
           >
             Add Book
           </button>
