--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <title>My Library</title>
   </head>
   <body>
+    <div class="container">
+      <div class="section">
+        <div class="row">
+          <div id="errorContainer" class="col s4"></div>
+        </div>
+      </div>
+    </div>
     <!-- Form -->
     <div class="container">
       <h1 class="header center">
